style.css
/* ... */
.dark-theme .title,
.dark-theme .section__title,
.dark-theme .section__subtitle,
.dark-theme .nav__link--anchor,
.dark-theme .fa-circle-half-stroke
.dark-theme .header__para {
    color: white;
}

.dark-theme section {
    background-color: #242424;
}

.dark-theme .personal__logo {
    filter: none;
}

.dark-theme .scroll__icon {
    border-color: white;
}

.dark-theme .scroll__icon:after,
.dark-theme .link__hover-effect--black:after {
    background-color: white;
}

.dark-theme .mail__btn {
    background-color: white;
    color: #242424;
}

/* NAVIGATION BAR */

nav {
    height: 100px;
    width: 100%;
    max-width: 1200px;
    margin: 0 auto;
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 0 20px;
}

.personal__logo {
    width: 50px;
    height: 50px;
    margin: 0 12px;
    filter: invert();
    border-radius: 5px;
}

.nav__link--list {
    display: flex;
}

.nav__link--anchor {
    margin: 0 12px;
    color: #242424;
    text-decoration: none;
    font-weight: bold;
}

.nav__link--anchor-primary {
    background-color: #6030b1;
    padding: 8px 20px;
    border-radius: 50px;
    color: #ffffff;
    transition: all 300ms ease;
}

.nav__link--anchor-primary:hover {
    background-color: #5d3eff;
}

.fa-circle-half-stroke {
    font-size: 20px;
}

/* ABOUT ME */

#landing {
    min-height: 100vh;
    width: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
    padding: 50px 20px;
}

.about-me__info {
    display: flex;
    align-items: center;
    justify-content: space-between;
}

.about-me__info--container {
    flex: 1;
    margin: 0 auto;
    text-align: left;
}

.about-me__info--title {
    font-size: 76px;
    margin-bottom: 12px;
    text-align: left;
    line-height: 1;
    animation: fade-up 650ms 400ms backwards;
}

.about-me__info--para {
    font-size: 20px;
    line-height: 2;
    width: 50%;
    max-width: 450px;
    margin-top: 28px;
    margin-bottom: 28px;
    animation: fade-up 650ms 600ms backwards;
}

.about-me__link {
    font-size: 20px;
    display: flex;
    justify-content: center;
    align-items: center;
    color: #242424;
    text-decoration: none;
    border-radius: 50%;
    padding: 0 16px;
    animation: fade-up 650ms 400ms backwards;
}

.about-me__links {
    display: flex;
    animation: fade-up 650ms 800ms backwards;
}

@keyframes fade-up {
    0% {
        opacity: 0;
        transform: translateY(40px);
    }
    100% {
        opacity: 1;
        transform: translateY(0);
    }
}

.mail__btn {
    width: 70px;
    height: 70px;
    font-size: 32px;
    border-radius: 50%;
    border: none;
    background-color: #242424;
    color: white;
    position: fixed;
    bottom: 32px;
    right: 40px;
}

.scroll {
    position: absolute;
    bottom: 50px;
    left: 50%;
    transform: translateX(-50%);
}

.scroll__icon {
    width: 20px;
    height: 30px;
    border: 2px solid #242424;
    border-radius: 24px;
    display: flex;
    align-items: center;
    justify-content: center;
}

.scroll__icon:after {
    content: "";
    width: 4px;
    height: 6px;
    background-color: #242424;
    border-radius: 2px;
    animation: scroll 1000ms infinite alternate-reverse;
}

@keyframes scroll {
    0% {
        transform: translateY(3px);
    }

    100% {
        transform: translateY(-3px);
    }
}

.about-me__img--container {
    flex: 1;
    display: flex;
    align-items: center;
    justify-content: end;
}

.about-me__img {
    width: 50%;
    height: 50%;
    transform: translateY(-250px);
    animation: fade-in 1200ms 800ms backwards;
}

@keyframes fade-in {
    0% {
        opacity: 0;
    }
    100% {
        opacity: 1;
    }
}

.wave {
    display: inline-block;
    animation: animate-wave 500ms infinite ease-in-out;
}

@keyframes animate-wave {
    0% {
        transform: rotate(0);
    }
    50% {
        transform: rotate(30deg);
    }
    100% {
        transform: rotate(0);
    }
}

/* MODAL */

.modal {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    width: 90%;
    max-width: 1100px;
    height: 700px;
    border-radius: 20px;
    overflow: hidden;
    display: flex;
    visibility: hidden;
    z-index: -1;
    transition: visibility 1s, z-index 1s, box-shadow 0.5s ease;
}

.modal--open .modal {
    z-index: 60;
    box-shadow: 0 20px 80px 0 rgba(0, 0, 0, 0.55);
    visibility: visible;
}

.modal__half {
    width: 50%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    position: relative;
    transition: all 300ms ease-in;
}

.modal--open .modal__about,
.modal--open .modal__contact {
    transform: translateX(0%);
}

.modal__about {
    background-color: rgb(245, 245, 245);
    transform: translateX(-110%);
}

.modal__languages {
    display: flex;
    flex-wrap: wrap;
}

.modal__language {
    width: 25%;
    padding: 16px;
    position: relative;
    display: flex;
    flex-direction: column;
    align-items: center;
    transition: all 300ms ease;
}

.modal__language:hover .language__name {
    transform: scale(1);
}

.modal__language:hover {
    filter: brightness(80%);
    transform: scale(0.9);
}

.language__name {
    position: absolute;
    bottom: -10px;
    transform: scale(0);
    transition: all 300ms ease;
}

.modal__language--img {
    width: 100%;
}

.modal__contact {
    background-color: #242424;
    color: #ffffff;
    transform: translateX(110%);
}

.modal__title {
    font-size: 26px;
    color: white;
}

.modal__title--about {
    font-size: 26px;
    color: #242424;
}

.modal__subtitle {
    margin: 12px 0 24px 0;
    font-size: 14px;
    color: #ffffff;
}

.modal__subtitle--about {
    margin: 12px 0 24px 0;
    font-size: 14px;
    color: #242424;
}

.modal__para {
    margin-bottom: 12px;
    line-height: 1.75;
    padding: 0 12px;
}

.form__item {
    margin-bottom: 20px;
    margin-left: 18px;
    margin-right: 32px;
}
/* ... */

